--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
     "check:ci": "biome ci .",
     "format": "biome format --write .",
     "lint": "biome lint .",
-    "vercel": "vercel"
+    "dev": "bun run index.ts --watch",
+    "build": "tsc --noEmit",
+    "start": "bun run index.ts"
   },
   "dependencies": {
-    "@biomejs/biome": "2.2.5",
+    "@biomejs/biome": "2.0.6",
+    "@types/bun": "1.2.23",
     "@types/node": "24.7.0",
     "@types/react": "19.2.2",
     "react": "19.2.0",
     "satori": "0.18.3",
-    "typescript": "5.9.3",
-    "vercel": "48.2.9"
+    "typescript": "5.9.3"
   }
 }
