--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/bun": "1.2.23",
     "@types/node": "24.7.0",
     "@types/react": "19.2.2",
+    "lru-cache": "11.2.2",
     "react": "19.2.0",
     "satori": "0.18.3",
     "typescript": "5.9.3"
